micro-kit-k8s/deploy/k8s/k8s-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    svc: user
    app: service
spec:
  replicas: 2
  selector:
    matchLabels:
      svc: user
      app: service
  template:
    metadata:
      labels:
        svc: user
        app: service
    spec:
      containers:
      - name: user-service
        image: harbor.justin.com/micro-kit/user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 10086
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 64Mi
            cpu: 250m
