micro-kit-k8s/deploy/k8s/k8s-apigateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-apigateway
  labels:
    svc: library
    app: apigateway
spec:
  replicas: 2
  selector:
    matchLabels:
      svc: library
      app: apigateway
  template:
    metadata:
      labels:
        svc: library
        app: apigateway
    spec:
      containers:
      - name: library-apigateway
        image: harbor.justin.com/micro-kit/apigateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 64Mi
            cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: library-apigateway
spec:
  ports:
  - port: 80
  selector:
    svc: library
    app: apigateway
