micro-kit-k8s/deploy/k8s/k8s-hystrixdashboard-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hystrix-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hystrix-dashboard
  template:
    metadata:
      labels:
        app: hystrix-dashboard
    spec:
      containers:
        - name: hystrix-dashboard
          image: mlabouardy/hystrix-dashboard
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002

---
apiVersion: v1
kind: Service
metadata:
  name: hystrix-dashboard
spec:
  ports:
  - port: 9002
  selector:
    app: hystrix-dashboard
