micro-kit-k8s/deploy/k8s/k8s-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
  labels:
    svc: book
    app: service
spec:
  ports:
  - name: web
    port: 10087
  selector:
    svc: book
    app: service
